# gef

./: .gitignore  CMakeLists.txt  README.md  annotated.html  classes.html  dir_00439ee72218ec9f6f2a3ef3d2c60139.html  dir_05b9dabfdf20bc1e48dc243d9ba5f22c.html  dir_10faf21de592f325b708dbac7e93efab.html  dir_1daf1df9878b8bc70d1b2bff6a4e7185.html  dir_30026c97440a023881610365dcda6ea2.html  dir_34101e66ba3588d29aa6c47d395c02e0.html  dir_34e9a5f624ac092a9ae2401c28d616d7.html  dir_41cbcd621d3592a4e2e005c5be1eef5f.html  dir_4eeb864c4eec08c7d6b9d3b0352cfdde.html  dir_6f9635d4fbfa321d4c00f29df5cd540c.html  dir_72da364f236d6a1e0ec63dd1c8d18fbf.html  dir_7b95fd8f1b6bc1aea1576af64b689b2f.html  dir_8b860aa7abd444185a98e64a58df8732.html  dir_a2f18f50706299376a7362b46e14bea1.html  dir_a5f32cf82ad289a7dac212f63f40f55b.html  dir_b2e8e77b3acbd0b3ec2d307ba09bac74.html  dir_c5a52a81292cf9a5167198f4f346d6d9.html  dir_d0411a3330e1b0f1a8484884e468d215.html  dir_d3ae24361f4e1ef8487244fb7525931f.html  dir_e0f2a5ef33e3ee039b20717ebc28c8e3.html  dir_e1be383195c4a888b9e59c924c060279.html  dir_e79632891301b850df87e9c0030293fa.html  dir_e7c3a753f8cba27ec2b9e27e2cdf6844.html  dir_e8522150b400a43ebfdbd1fed060b8e2.html  dir_f1428827e98d2dc4bbad5cfdf254dcc1.html  doxygen.cfg  files.html  functions.html  functions_func.html  functions_vars.html  gef.h  hierarchy.html  index.html  menudata.js
animation/: animation.cpp  animation.h  joint.cpp  joint.h  skeleton.cpp  skeleton.h
assets/: obj_loader.cpp  obj_loader.h  png_loader.cpp  png_loader.h
audio/: audio_manager.cpp  audio_manager.h
d0/d05/: classgef_1_1_transform_anim_node-members.html
d0/d31/: classgef_1_1_application-members.html
d0/d57/: classgef_1_1_index_buffer.html
d0/d58/: structgef_1_1_vertex_data.html
d0/d64/: classgef_1_1_texture_d3_d11.html
d0/d99/: classgef_1_1_f_b_x_loader-members.html
d0/da0/: classgef_1_1_keyboard.html
d0/da7/: sprite__renderer__d3d11_8h_source.html
d0/db9/: classgef_1_1_font-members.html
d0/dbd/: structgef_1_1_mesh_data-members.html
d0/dc0/: classgef_1_1_platform-members.html
d0/df4/: structgef_1_1_default3_d_shader_1_1_mesh_data-members.html
d0/df8/: classgef_1_1_input_manager.html
d1/d03/: vector2_8h_source.html
d1/d05/: classgef_1_1_file-members.html
d1/d08/: texture__d3d11_8h_source.html
d1/d1d/: classgef_1_1_file_win32.html
d1/d52/: classgef_1_1_skinned_mesh_shader_data-members.html
d1/d6e/: classgef_1_1_string_id_table-members.html
d1/d71/: primitive_8h_source.html
d1/d97/: sony__controller__input__manager_8h_source.html
d1/d9d/: structgef_1_1_mesh_vertex_data.html
d1/da0/: structgef_1_1_poly_vert_data-members.html
d1/dc1/: render__target__d3d11_8h_source.html
d1/df4/: shader_8h_source.html
graphics/: colour.cpp  colour.h  default_3d_shader.cpp  default_3d_shader.h  default_3d_shader_data.cpp  default_3d_shader_data.h  default_3d_skinning_shader.cpp  default_3d_skinning_shader.h  default_sprite_shader.cpp  default_sprite_shader.h  depth_buffer.cpp  depth_buffer.h  font.cpp  font.h  image_data.cpp  image_data.h  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_data.cpp  mesh_data.h  mesh_instance.cpp  mesh_instance.h  model.cpp  model.h  point_light.h  primitive.cpp  primitive.h  render_target.cpp  render_target.h  renderer_3d.cpp  renderer_3d.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_interface.cpp  (+11 more)
input/: input_manager.cpp  input_manager.h  keyboard.cpp  keyboard.h  sony_controller_input_manager.cpp  sony_controller_input_manager.h  touch_input_manager.cpp  touch_input_manager.h
maths/: aabb.cpp  aabb.h  frustum.cpp  frustum.h  math_utils.h  matrix22.h  matrix33.cpp  matrix33.h  matrix44.cpp  matrix44.h  plane.cpp  plane.h  quaternion.cpp  quaternion.h  quaternion.inl  sphere.cpp  sphere.h  transform.cpp  transform.h  vector2.cpp  vector2.h  vector2.inl  vector3.cpp  vector3.h  vector3.inl  vector4.cpp  vector4.h  vector4.inl
platform/gl/: CMakeLists.txt
platform/gl/graphics/: index_buffer_gl.cpp  index_buffer_gl.h  render_target_gl.cpp  render_target_gl.h  renderer_3d_gl.cpp  renderer_3d_gl.h  shader_interface_gl.cpp  shader_interface_gl.h  sprite_renderer_gl.cpp  sprite_renderer_gl.h  texture_gl.cpp  texture_gl.h  vertex_buffer_gl.cpp  vertex_buffer_gl.h
platform/gl/system/: platform_gl.cpp  platform_gl.h
platform/glfw/: CMakeLists.txt
platform/glfw/input/: input_manager_glfw.cpp  input_manager_glfw.h  keyboard_glfw.cpp  keyboard_glfw.h  touch_input_manager_glfw.cpp  touch_input_manager_glfw.h
platform/glfw/system/: platform_glfw.cpp  platform_glfw.h
platform/std/: CMakeLists.txt
platform/std/system/: debug_log_std.cpp  file_std.cpp  file_std.h
platform/xgl/: CMakeLists.txt
platform/xgl/system/: platform_xgl.cpp  platform_xgl.h
samples/: .gitignore
samples/assimp_viewer/: CMakeLists.txt  assimp_scene_loader.cpp  assimp_scene_loader.h  assimp_viewer.cpp  assimp_viewer.h  imgui_impl_glfw_gl3.cpp  main_d3d11.cpp  main_glfw.cpp  orbit_camera.cpp  orbit_camera.h  primitive_builder.cpp  primitive_builder.h
samples/assimp_viewer/addons/imguifilesystem/: imguifilesystem.cpp
samples/create_mesh/: CMakeLists.txt  main_d3d11.cpp  main_glfw.cpp  main_vita.cpp  main_xgl.cpp  mesh_app.cpp  mesh_app.h
samples/imgui_app/: .gitignore  CMakeLists.txt  imgui_app.cpp  imgui_app.h  main_glfw.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+9 more)
system/: application.cpp  application.h  crc.cpp  crc.h  debug_log.h  file.cpp  file.h  memory_stream_buffer.cpp  memory_stream_buffer.h  platform.cpp  platform.h  string_id.cpp  string_id.h
(+357 files in other folders)
